second commit need fix

--- a/index.html
+++ b/index.html
@@ -27,66 +27,65 @@
     </header>
 
     <main>
-        <div id="content" class="summary">
+        <div id="content" class="summary" >
             <p>I am a student pursuing a degree in Information Systems major. Besides focusing on my education, I also have a hobby of playing fps games, for now I'm focusing on playing Valorant Game, Valorant is an online shooter game that demands teamwork and individual skills. My goal is to become a professional player in the world of Valorant, where I can compete at the highest level and develop my gaming skills to the max. All of this shows my commitment to the world of technology and games, apart from that I also have an interest in the field of UI/UX, in UI/UX I usually use FIGMA to create application designs, here are data, Achievements and some results from UI/UX that I made.</p>
         </div>
         <article>
-            <div class="main">
-                
-                <ul class="cards">
-                  <li class="cards_item">
-                    <div class="card">
-                      <div class="card_image"><img src="Assets/PhotoEsport.jpeg"></div>
-                      <div class="card_content">
-                        <h2 class="card_title">VALORANT</h2>
-                        <p class="card_text">All About valorant, include achievement, role, and etc.</p>
-                        <button class="btn card_btn">more</button>
-                      </div>
-                    </div>
-                  </li>
-                  <div class="article-text">
-                    <h2> Summary Valorant</h2>
-                    <br>
-                    <ul>
-                        <h4>Nickname and Role :</h4>
-                        <br>
-                        <li>Nickname : LemonBoy/Davael</li>
-                        <li>Role : Sec. IGL, Sentinel/Flex</li>
-                        <br>
-                        <br>
-                        <h4>Achievement : </h4>
-                        <br>
-                        <li> Champion of Stream Gaming III tournament on 25 june 2021</li>
-                        <li> Champion of Stream Gaming IX tournament on 18 January 2022</li>
-                        <li> Champion of Bowl League Tournament on 19 November 2022</li>
-                        <li> Champion of Esport7 by Trans7 Valorant tournament 2023</li>
-                        <li> Runner-up of Lenovo Gaming Community 1v1 Tournament Region Medan 2022</li>
-                        <li> Runner-up of Bowl League Tournament on 12 November 2022</li>
-                        <li> Runner-up of Unpri Esport Championship : Internal exhibition 2023</li>
-                        <li> Other...</li>
-                    </ul>
-                </div>
-                </ul>
+          <div class="article-text">
+            <h2> Summary Valorant</h2>
+            <br>
+            <div class="row">
+              <div class="content">
+              <ul>
+                <h4>Nickname and Role :</h4>
+                <br>
+                <li>Nickname : LemonBoy/Davael</li>
+                <li>Role : Sec. IGL, Sentinel/Flex</li>
+                <br> <br>
+                <h4>Achievement :</h4>
+                <br>
+                <li> Champion of Stream Gaming III tournament on 25 june 2021</li>
+                <li> Champion of Stream Gaming IX tournament on 18 January 2022</li>
+                <li> Champion of Bowl League Tournament on 19 November 2022</li>
+                <li> Champion of Esport7 by Trans7 Valorant tournament 2023</li>
+                <li> Runner-up of Lenovo Gaming Community 1v1 Tournament Region Medan 2022</li>
+                <li> Runner-up of Bowl League Tournament on 12 November 2022</li>
+                <li> Runner-up of Unpri Esport Championship : Internal exhibition 2023</li>
+                <li> Other...</li>
+              </ul>
               </div>
-        </article>
-        <article> </article>
-        <aside style="color: white;"> 
-            <h2>Bio Data</h2>
-            <div>
-                <figure>
-                    <img src="Assets/foto.jpg" height="300px">
-                </figure>
+              <div class="image">
+                <img src="Assets/PhotoEsport.jpeg" style="width: 500px;">
+              </div>
             </div>
-                <ul>
-                    <li>Valorant</li>
-                    <li>Make Vandal</li>
-                    <li>Make Phantom</li>
-                </ul>
+          </div>
+        </article>
+        <article>
+          <div class="article-text">
+            <h2> Summary UI/UX</h2>
+            <br>
+            <ul>
+              <h4>UI/UX :</h4>
+              <br>
+              <li> UI/UX for Mobile Application</li>
+              <li> UI/UX for Website</li>
+              <li> UI/UX for Desktop Application</li>
+              <li> UI/UX for Other</li>
+            </ul>
+          </div>
+        </article>
+
+        <aside>
+          <div class="card">
+            <img src="Assets/PhotoEsport.jpeg" style="width: 500px;">
+            <p> Keterangan</p>
+          </div>
         </aside>
+        
     </main>
 
     <footer>
-
+      &copy; 2023 Mu'ammar Dafa'
     </footer>
 </body>
 </html>
